# open-onedrive

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/ipc-types/: Cargo.toml
crates/ipc-types/src/: lib.rs
crates/openonedrivectl/: Cargo.toml
crates/openonedrivectl/src/: main.rs
crates/openonedrived/: Cargo.toml
crates/openonedrived/src/: app.rs  bus.rs  daemon.rs  main.rs  mount.rs
crates/rclone-backend/: Cargo.toml
crates/rclone-backend/src/: lib.rs  path_state.rs  vfs.rs
crates/rclone-worker/: Cargo.toml
crates/rclone-worker/src/: lib.rs  main.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
integrations/: CMakeLists.txt
integrations/dolphin-actions/: CMakeLists.txt  metadata.json
integrations/dolphin-actions/src/: ActionPlugin.cpp  ActionPlugin.hpp
integrations/dolphin-overlay/: CMakeLists.txt
integrations/dolphin-overlay/src/: OverlayIconPlugin.cpp  OverlayIconPlugin.hpp
integrations/nautilus/: CMakeLists.txt
integrations/nautilus/src/: openonedrive.py
integrations/overlay-icons/: CMakeLists.txt  metadata.json
integrations/overlay-icons/src/: OverlayPlugin.cpp  OverlayPlugin.hpp
packaging/: open-onedrive-launcher.in  open-onedrive-tray-autostart.desktop.in  open-onedrive.desktop.in  openonedrived.service.in
scripts/: dev.sh  install-rclone.sh  install.sh
ui/: CMakeLists.txt
ui/qml/: Main.qml
ui/qml/components/: MountPathEditor.qml  StatusCard.qml
ui/qml/pages/: DashboardPage.qml  DashboardShell.qml  ExplorerPage.qml  LogsPage.qml  SetupPage.qml
ui/resources/: ui.qrc
ui/src/: ShellBackend.cpp  ShellBackend.h  appcontroller.cpp  appcontroller.h  main.cpp  tray_main.cpp
xtask/: Cargo.toml
xtask/src/: main.rs
