[package]
name = "openonedrived"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
openonedrive-config = { path = "../config" }
openonedrive-ipc-types = { path = "../ipc-types" }
openonedrive-rclone-backend = { path = "../rclone-backend" }
openonedrive-state = { path = "../state" }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
