[package]
name = "openonedrive-rclone-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
fuser.workspace = true
libc.workspace = true
openonedrive-config = { path = "../config" }
openonedrive-ipc-types = { path = "../ipc-types" }
openonedrive-state = { path = "../state" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
